<resources>
    <string name="app_name">GitHubApp</string>
    <string name="login">Login</string>
    <string name="token">Token</string>
    <string name="sample_login">user</string>
    <string name="sample_followers">Followers: 5</string>
    <string name="sample_following">Following: 34</string>
    <string name="logout">Logout</string>
    <string name="sample_repository">repository</string>
    <string name="sample_contributors">34</string>
    <string name="label_contributors">Contributors</string>
    <string name="sample_owner">Owner</string>
    <string name="label_owner">Owner</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="profile">Profile</string>
    <string name="sample_user">user name</string>
    <string name="label_following">Following</string>
    <string name="label_followers">Followers</string>
    <string name="sample_followers_number">10</string>
    <string name="sample_following_number">243</string>
</resources>